overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,9 @@
   --container-width-md: 86%;
   --container-width-sm: 90%;
 }
-
+#root {
+  overflow-x: hidden;
+}
 html {
   scroll-behavior: smooth;
 }
